src/footer.css
@import './style.css';

  #footerSocials>*>img {
    aspect-ratio: 1/1;
      max-height: 3rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
  #linkedInLogo {
    filter: brightness(10); /* 0-1 is darker, above is brighter */
  }

  #disclaimer {
    max-width: 30rem;
    color: black;
  }
  
  footer{
    aspect-ratio: auto;
      height: auto;
      width: 100%;
    background-color: var(--backgroundColor2);
    /* position: absolute;
      bottom: 0px; */
    margin-top: 5rem;
    padding-bottom: 3rem;
    /* padding-top: 3rem; */
  }

  footer>* {
    color: var(--textColor2);
  }
  
  #horizontalRow {
    display: flex;
      justify-content: space-around;
    padding-left: 5rem;
    padding-right: 5rem;
    padding-top: 3rem;
  }
  @media (max-width: 600px) {
    #horizontalRow {
      flex-direction: column;
    }
  }
  #horizontalRow>* {
    flex:1;
  }
    #footerReineYurkowskiSignature {
      aspect-ratio: auto;
        /* min-width: 20rem; */
        max-width: 100%;
      /* filter:invert(1); */
      flex:1;
      text-align: center;
      align-content: center;
    }
    #footerContact {
      text-align: right;
      display: flex;
        flex-direction: column;
        justify-content: space-around;
      flex:1;
    }
    @media (max-width: 600px) {
      #footerContact {
        line-height: 5rem;
      }
    }
      #footerContact>*:link,
      #footerContact>*:visited{
        color: var(--textColor1);
        text-decoration: none;
      }
    #footerSocials {
      filter:invert(1);
      flex:1;
      padding-top: 1.2rem;
      text-align: center;
    }

